Everything working, need to get stuff from args